# color-palette

./: CMakeLists.txt
src/: Color.cpp  Main.cpp  Tmp.cpp
